k8s/jarvis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jarvis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: jarvis
  template:
    metadata:
      labels:
        app: jarvis
    spec:
      containers:
        - image: jarvis
          name: jarvis-app
          ports:
            - containerPort: 8080
            - containerPort: 50051
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
      restartPolicy: Always
