k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  labels:
    io.kompose.service: mysql
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      labels:
        io.kompose.network/jarvis-default: "true"
        io.kompose.service: mysql
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: jarvis
            - name: MYSQL_PASSWORD
              value: root
            - name: MYSQL_ROOT_PASSWORD
              value: root
            - name: MYSQL_USER
              value: jarvis
          image: mysql:latest
          name: mysql
          ports:
            - containerPort: 3306
          resources:
            limits:
              memory: "512Mi"
              cpu: "1500m"
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-persistence-storage
      restartPolicy: Always
      volumes:
        - name: mysql-persistence-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
