k8s/jarvis-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jarvis
  name: jarvis
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8080
    - name: "50052"
      port: 50052
      targetPort: 50051
  selector:
    app: jarvis
