k8s/jarvis-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jarvis-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: jarvis
        - podSelector:
            matchLabels:
              app: mysql
  podSelector:
    matchLabels:
      app: jarvis
